Maybe finally finally fix the height issue on mobile

--- a/public/css/chat.css
+++ b/public/css/chat.css
@@ -13,13 +13,14 @@ body {
 	display:flex;
 	flex-direction:column;
 	justify-content: stretch;
+	height: 100vh;
+	overflow-y: hidden;
 	background: var(--background);
 	overscroll-behavior: contain;
 }
 
 .columns {
 	display: flex;
-	height: 100vh;
 	max-width: 100vw;
 	overflow: hidden;
 }
@@ -67,6 +68,8 @@ body {
 }
 
 #send-form .field {
+	display: inline;
+	flex: 1;
 	resize: none;	
 	padding: 0.25em;
 	font-size: 1em;
@@ -77,6 +80,8 @@ body {
 }
 
 #send-form .send {
+	display: inline;
+	min-width: 3em;
 	background-color: var(--green);
 	font-size: 1em;
 	padding: 0 1em;
